# testQtQuickRobotDisplay

./: .gitignore  CMakeLists.txt  LabeledSlider.qml  MainScreen.qml  README.md  animatedparam.cpp  animatedparam.h  backend.cpp  backend.h  main.cpp  main.qml  qml.qrc  qmlmodules  robotModelDisplay.pro  robotarmExample.qmlproject  rough_robot.blend  rough_robot.blend1
backend/: CMakeLists.txt  animatedparam.h  backend.cpp  backend.h  qmldir
blender_files/: Compass_disk.qml  Robot_base.qml  Tail_link_1.qml  Tail_link_2.qml  compass_disk.dae  robot_base.dae  rough_robot.blend  rough_robot.blend1  tail_link_1.dae  tail_link_2.dae
content/: App.qml  CMakeLists.txt  Compass_disk.qml  LabeledSlider.ui.qml  MainScreen.ui.qml  Robot_base.qml  RoboticArm.ui.qml  Tail_link_1.qml  Tail_link_2.qml
content/meshes/: cube_002.mesh  cube_005.mesh  cube_006.mesh  cylinder.mesh
imports/RobotArm/: CMakeLists.txt  Constants.qml
meshes/: cube.mesh  cube_003.mesh  cube_004.mesh  cylinder.mesh  tail_link_2.mesh
src/: import_qml_plugins.h  main.cpp
